@@ -1,6 +1,6 @@
 /*
  * Discards standard input.
- * $Id: null.c,v 1.9 2008/04/17 21:37:12 mina86 Exp $
+ * $Id: null.c,v 1.10 2008/04/19 21:05:07 mina86 Exp $
  * Copyright (c) 2005-2008 by Michal Nazarewicz (mina86/AT/mina86.com)
  *
  * This program is free software; you can redistribute it and/or modify
@@ -19,69 +19,108 @@
  */
 
 /*
- * usage: <progra> <args> | null
+ * With -n redirects stdout and stderr to /dev/null and execute given
+ * program.
  *
- * Discards all data read from standard input.  For people feeling
- * >/dev/null is too much to type.
+ * With -b or -B fork()s and then execute the command with stdout and
+ * stderr refirected to /dev/null.
  *
- * usage: run [ -n | -b | -B | -d | -D ] <program> <args>
- *
- * If -n is given program will only redirect stdout and stderr to
- * /dev/null and execute given program.
- *
- * If -b is given program will fork() and then execute the command
- * with stdout and stderr refirected to /dev/null.  -B makes it also
- * print the PID of the process.
- *
- * If -d is given program will fork(), setsid() (to become process
- * group and session group leader), fork() once again (so process
- * cannot regain a controlling terminal), change cwd to root
- * directory, then close() all opened file descriptors above 2, and
- * finally execute the command with all stdin, stdout and stderr
- * redirected to/from /dev/null.  -D makes it also print the PID of
- * the process.
+ * With -d or -D fork()s, setsid()s (to become process group, session
+ * group leader and loose controling terminal), fork()s once again (so
+ * process cannot regain a controlling terminal), changes cwd to root
+ * directory, then close()s all opened file descriptors above 2, and
+ * finally executes the command with all stdin, stdout and stderr
+ * redirected to/from /dev/null.
  *
  * The default is -b but program checks how it was called and if the
  * first letter of the command maches one of the switches given switch
  * is taken as default.
+ *
+ * With -N adjusts processes nice value.  This feature can be disabled
+ * at compile time with DISABLE_NICE macro.
+ *
+ * With -b, -B, -d or -D parent waits one second in case child exits
+ * so that it can report on exit status etc.  This is disabled with -w
+ * switch.  It can be also disabled at compile time with DISABLE_WAIT
+ * macro.
  */
 
 
+/******** Config ********/
+#define DISABLE_NICE 0 /* Set to 1 to disable -N feature. */
+#define DISABLE_WAIT 0 /* Set to 0 to disable waiting. */
+
+
 /******** Includes ********/
+#if !DISABLE_NICE
+#  define _BSD_SOURCE 1
+#endif
+#if !DISABLE_WAIT
+#  define _POSIX_SOURCE 1
+#endif
+
+#include <errno.h>
 #include <sys/types.h>
 #include <unistd.h>
 #include <fcntl.h>
 #include <stdio.h>
 #include <string.h>
+#if !DISABLE_NICE
+#  include <stdlib.h>
+#endif
+#if !DISABLE_WAIT
+#  include <sys/types.h>
+#  include <sys/wait.h>
+#  include <signal.h>
+#endif
 
 
 /******** Usage ********/
-void usage(FILE *out, char *cmd, int full) {
-	fprintf(out, "usage: %s [-n | -b | -B | -d | -D] <program> <args>\n"
+static void usage(FILE *out, char *cmd, int full) {
+	fprintf(out, "usage: %s [<switches>] [--] <program> <args>\n"
 	             "       <program> <args> | null", cmd);
 	if (!full) return;
-	fputs("  -n  discard output only (runs in foreground)\n"
-	      "  -b  discard output and run in background (ie. fork) [default]\n"
-	      "  -B  -b + print child's PID\n"
-	      "  -d  discard input and output and daemonization"
-	      "  -D  -d + print child's PID\n"
-	      "-b is the default unless command's name first letter maches one of the\n"
-	      "switches in which case taht switch becomes default.\n", out);
+	fputs("<switches> are:\n"
+	      "  -n         discard output only (runs in foreground)\n"
+	      "  -b         discard output and run in background (ie. fork)\n"
+	      "             default unless command name first letter maches one\n"
+	      "             of the [xBdD] (x means b)\n"
+	      "  -B         -b + print child's PID\n"
+	      "  -d         discard input and output and daemonization"
+	      "  -D         -d + print child's PID\n"
+#if !DISABLE_NICE
+	      "  -N<[adj>]  adjust nice by <adj> (10 by default)\n"
+#endif
+#if !DISABLE_WAIT
+	      "  -w         do not wait a second in case child exits\n"
+#endif
+	      , out);
 }
+
+
+#if DISABLE_WAIT
+#  define wait_and_exit(argv0) _exit(0)
+#else
+static void wait_and_exit(char *argv0);
+#endif
 
 
 /******** Main ********/
 int main(int argc, char **argv) {
+	char *argv0, *c;
 	int daemonize;
+#if !DISABLE_NICE
+	int nice_adj = 0;
+#endif
+#if !DISABLE_WAIT
+	int doWait = 1;
+#endif
 
 	/* Parse command name */
-	{
-		char *c = *argv;
-		for (; *c; ++c) {
-			if (*c=='/' && c[1] && c[1]!='/') *argv = ++c;
-		}
+	for (c = argv0 = *argv; *c; ++c) {
+		if (*c=='/' && c[1] && c[1]!='/') argv0 = ++c;
 	}
-	switch (*argv[0]) {
+	switch (*argv0) {
 	case 'n': daemonize = 0; break;
 	case 'B': daemonize = 2; break;
 	case 'd': daemonize = 3; break;
@@ -97,40 +136,71 @@ int main(int argc, char **argv) {
 			chdir("/");
 			while (read(0, buf, sizeof buf) > 0);
 		} else {
-			usage(stdout, *argv, 1);
+			usage(stdout, argv0, 1);
 		}
 		return 0;
 	}
 
 
 	/* Parse argument */
-	if (argv[1][0]=='-' && argv[1][1] && argv[1][2] == 0) {
-		switch (argv[1][1]) {
-		case 'n': daemonize = 0; break;
-		case 'b': daemonize = 1; break;
-		case 'B': daemonize = 2; break;
-		case 'd': daemonize = 3; break;
-		case 'D': daemonize = 4; break;
-
-		case 'h':
-			usage(stdout, *argv, 1);
-			return 0;
-
-		default:
-			usage(stderr, *argv, 0);
-			return 1;
-		}
+	while (argc > 1 && argv[1][0] == '-') {
+		int pos = 1;
 		++argv;
 		--argc;
+		do {
+			switch (argv[0][pos]) {
+			case 'n': daemonize = 0; break;
+			case 'b': daemonize = 1; break;
+			case 'B': daemonize = 2; break;
+			case 'd': daemonize = 3; break;
+			case 'D': daemonize = 4; break;
 
-		if (argc == 1) {
-			usage(stderr, *argv, 0);
-			return 1;
-		}
+#if !DISABLE_NICE
+			case 'N':
+				nice_adj = 10;
+				if (argv[0][pos + 1] == 0) break;
+				errno = 0;
+				nice_adj = strtol(argv[0] + pos + 1, &c, 0);
+				if (errno || *c || nice_adj < -40 || nice_adj > 40) {
+					fprintf(stderr, "%s: invalid adjustment: %s\n",
+					        argv0, argv[0] + pos + 1);
+					return 1;
+				}
+				pos = c - argv[0] - 1;
+				break;
+#endif
+
+#if !DISABLE_WAIT
+			case 'w': doWait = 0; break;
+#endif
+
+			case 'h': usage(stdout, argv0, 1); return 0;
+			case '-': if (pos == 1 && !argv[0][2]) goto args_end;
+			default : usage(stderr, argv0, 0); return 1;
+			}
+		} while (argv[0][++pos]);
+	}
+
+ args_end:
+	if (argc == 1) {
+		usage(stderr, argv0, 0);
+		return 1;
 	}
 
 
-#define DIE(cond, msg) if (cond) { perror(msg); return 1; } else (void)0
+#define DIE(cond, msg) if (cond) { \
+		fprintf(stderr, "%s: %s: %s\n", argv0, msg, strerror(errno)); \
+		return 1; \
+	} else (void)0
+
+#if !DISABLE_NICE
+	/* Nice */
+	if (nice_adj) {
+		errno = 0;
+		nice(nice_adj);
+		DIE(errno, "nice");
+	}
+#endif
 
 	/* Fork into background */
 	if (daemonize) {
@@ -141,6 +211,9 @@ int main(int argc, char **argv) {
 		case  0: break;
 		default:
 			if (daemonize==2) printf("%d\n", (int)pid);
+#if !DISABLE_WAIT
+			if (doWait) wait_and_exit(daemonize < 3 ? argv0 : 0);
+#endif
 			_exit(0);
 		}
 	}
@@ -158,7 +231,10 @@ int main(int argc, char **argv) {
 		case  0: break;
 		default:
 			if (daemonize==4) printf("%d\n", (int)pid);
-			_exit(0);
+#if !DISABLE_WAIT
+			if (doWait) wait_and_exit(argv0);
+#endif
+			wait_and_exit(argv0);
 		}
 
 		/* Close all fds and stdin*/
@@ -173,6 +249,51 @@ int main(int argc, char **argv) {
 	DIE(dup2(1, 2) < 0, "dup: stdout, stderr");
 
 	execvp(argv[1], argv + 1);
-	perror("exec");
-	return 2;
+	/*
+	 * fprintf(stderr, "%s: exec: %s: %s", argv0, argv[1], strerror(errno));
+	 * No use writing anything to stderr anyway now.
+	 */
+	return 3;
 }
+
+
+/******** Wait for child for a while and exit ********/
+#if !DISABLE_WAIT
+static void sig_dummy(int sig) { (void)sig; }
+
+static void wait_and_exit(char *argv0) {
+	struct sigaction sa;
+	int status;
+
+	sa.sa_handler = sig_dummy;
+	sa.sa_flags = SA_NOMASK;
+	sigaction(SIGALRM, &sa, 0);
+
+	alarm(1);
+	if (wait(&status) <= 0) {
+		_exit(0);
+	}
+
+	if (WIFEXITED(status)) {
+		if (argv0 && WEXITSTATUS(status)) {
+			fprintf(stderr, "%s: child exited with code: %d\n", argv0,
+			        WEXITSTATUS(status));
+		}
+		_exit(WEXITSTATUS(status));
+	} else if (WIFSIGNALED(status)) {
+		if (argv0) {
+#ifdef WCOREDUMP
+			fprintf(stderr, "%s: child recieved signal: %d%s\n", argv0,
+			        WTERMSIG(status),
+			        WCOREDUMP(status) ? " [core dumped]" : "");
+#else
+			fprintf("%s: child recieved signal: %d\n", argv0,
+			        WTERMSIG(status));
+#endif
+		}
+		_exit(2);
+	}
+
+	_exit(0);
+}
+#endif
